# dd_collaborative_computing

./: CMakeLists.txt  README.md
include/: PHE.cpp  PHE.h  SHE.cpp  SHE.h
test/: main.cpp
